--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -22,7 +22,7 @@
   }
 
   @media only screen and (max-width:$cut-body){
-    display: hidden;
+    display: none;
   }
 }
 
